--- a/abstract.html
+++ b/abstract.html
@@ -278,6 +278,83 @@ Evaluating robot control policies is difficult: real-world testing is costly, an
                 </div>
             </div>
         </div>
+
+        <div class="rollout-section-title">Correlation between Real-World and Simulated Policy Performance</div>
+        <div class="media-gallery">
+            <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin-bottom: 10px;">
+                <div style="text-align: center; flex: 1; min-width: 300px; max-width: 380px;">
+                    <img src="figures_svg/real_vs_world_model_scatter.svg" alt="Per-Task Success Rates" class="media-item" style="max-width: 100%;">
+                    <div class="media-caption" style="text-align: left;"><b>Per-Task Task Success Rates.</b> Each point represents a task from Table \ref{app:tab:bridge_results_detailed}, with different policies being represented by different shaped markers. There is a strong correlation (r=0.78) between policy performance in our world model (y-axis) and within the real world (x-axis).</div>
+                </div>
+                <div style="text-align: center; flex: 1; min-width: 300px; max-width: 380px;">
+                    <img src="figures_svg/mean_success_rates_bar.svg" alt="Mean Success Rates" class="media-item" style="max-width: 100%;">
+                    <div class="media-caption" style="text-align: left;"><b>Mean Success Rates.</b> Robot policies' mean success rates in the world model differ by an average of only 3.3% between from the real world, near the standard error range for each policy. Relative performance rankings between RT-1-X, Octo, and OpenVLA are also preserved.</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="rollout-section-title">Policy Rollouts on Bridge and Google Robot</div>
+        <div class="media-gallery">
+            <div style="text-align: center;">
+                <img src="figures_svg/policy_rollouts_2.svg" alt="Policy Rollouts" class="media-item" style="max-width: 100%;">
+                <div class="media-caption" style="text-align: left;"><b>Qualitative policy rollouts on Bridge and Google Robot</b> for RT-1-X, Octo, and OpenVLA. OpenVLA rollouts often lead to more visual successes than the other two policies across environments.</div>
+            </div>
+        </div>
+
+        <div class="rollout-section-title">Policy Ranking within a World Model</div>
+        <div class="media-gallery">
+            <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin-bottom: 10px;">
+                <div style="text-align: center; flex: 1; min-width: 300px; max-width: 380px;">
+                    <img src="figures_svg/policy_ranking_versions.svg" alt="Policy Ranking by Version" class="media-item" style="max-width: 100%;">
+                    <div class="media-caption" style="text-align: left;"><b>Success Rates of different model versions in WorldGym.</b> We evaluate different generations of Octo and OpenVLA in the world model, showing that WorldGym assigns higher score to larger and more recent versions.</div>
+                </div>
+                <div style="text-align: center; flex: 1; min-width: 300px; max-width: 380px;">
+                    <img src="figures_svg/steps_vs_policy_success.svg" alt="Success Rate vs Training Steps" class="media-item" style="max-width: 100%;">
+                    <div class="media-caption" style="text-align: left;"><b>Success Rate within WorldGym throughout training.</b> We train a video-based policy and a diffusion policy from scratch and evaluate it within our world model as it trains. We see that mean task success rate within the world model increases with additional training steps.</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="rollout-section-title">Out-of-Distribution Inputs</div>
+        <div class="media-gallery">
+            <div style="text-align: center; max-width: 400px; margin: 0 auto 20px;">
+                <img src="figures_svg/ood_classify_redblue_tasks.svg" alt="OOD Color Classification" class="media-item" style="max-width: 100%;">
+                <div class="media-caption" style="text-align: left;"><b>OOD: Color Classification.</b> We add red and blue pieces of paper to a table, and ask the policies to "pick red" or "pick blue" (OOD image and language). OpenVLA excels, picking the correct colored paper in all trials, whereas all other policies score near chance.</div>
+            </div>
+
+            <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin-bottom: 10px;">
+                <div style="text-align: center; flex: 1; min-width: 300px; max-width: 380px;">
+                    <img src="figures_svg/ood_put_orange_on_plate_v2.svg" alt="OOD Unseen Object" class="media-item" style="max-width: 100%;">
+                    <div class="media-caption" style="text-align: left;"><b>OOD: Unseen object.</b> We use Nano Banana to add an orange to the world model's initial frame. When both the orange and the carrot are present, (a-b) OpenVLA grabs whichever is closer. After (c) editing the carrot's color to red, however, the orange is correctly picked up.</div>
+                </div>
+                <div style="text-align: center; flex: 1; min-width: 300px; max-width: 380px;">
+                    <img src="figures_svg/ood_advanced.svg" alt="OOD Failure Modes" class="media-item" style="max-width: 100%;">
+                    <div class="media-caption" style="text-align: left;"><b>OOD: Failure modes.</b> <i>Left:</i> We add a laptop to the scene, which displays an image of a carrot. In 15% of trials, OpenVLA grabs the laptop instead of the real carrot. <i>Right:</i> We test the ability distinguish to between squares and circles, celebrity faces, and cats and dogs, with all policies scoring near-chance.</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="rollout-section-title">OOD Language Instructions</div>
+        <div class="media-gallery">
+            <div style="text-align: center;">
+                <img src="figures_svg/ood_language_rollouts.svg" alt="OOD Language Instructions" class="media-item" style="max-width: 100%;">
+                <div class="media-caption" style="text-align: left;"><b>OOD Language Instructions.</b> We pick a set of tasks from the OpenVLA Bridge evaluation suite and modify the language instruction, e.g. changing the the target object and/or its goal destination.</div>
+            </div>
+        </div>
+
+        <div class="rollout-section-title">Effect of OOD Distractors</div>
+        <div class="media-gallery">
+            <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin-bottom: 10px;">
+                <div style="text-align: center; flex: 1; min-width: 300px; max-width: 380px;">
+                    <img src="figures_svg/ood_distraction_eval.svg" alt="OOD Distraction Examples" class="media-item" style="max-width: 100%;">
+                    <div class="media-caption" style="text-align: left;"><b>OOD Distraction Examples.</b> We use Nano Banana to add distractions to every image of the OpenVLA Bridge task suite. The resulting change in mean success rates can be seen in the figure on the right.</div>
+                </div>
+                <div style="text-align: center; flex: 1; min-width: 300px; max-width: 380px;">
+                    <img src="figures_svg/world_model_vs_ood_success_rates.svg" alt="Effect of OOD Distractors" class="media-item" style="max-width: 100%;">
+                    <div class="media-caption" style="text-align: left;"><b>Effect of OOD Distractors.</b> We use an image editing model to add distractor objects to the Bridge evaluation suite, finding that RT-1-X drops in performance by 51%, Octo by 83%, and OpenVLA by 41.5%, making OpenVLA the most robust to distractors.</div>
+                </div>
+            </div>
+        </div>
         
         <div class="rollout-section-title">Rollout Examples</div>
         <div class="media-caption" style="font-style: normal;">Comparing (ground truth, generated) rollouts for unseen action trajectories across different robots, using a single interactive diffusion model.</div>
