--- a/abstract.html
+++ b/abstract.html
@@ -265,17 +265,12 @@
 Evaluating robot control policies is difficult: real-world testing is costly, and handcrafted simulators require manual effort to improve in realism and generality. We propose a world-model-based policy evaluation environment (WorldGym), an autoregressive, action-conditioned video generation model which serves as a proxy to real world environments. Policies are evaluated via Monte Carlo rollouts in the world model, with a vision-language model providing rewards. We evaluate a set of VLA-based real-robot policies in the world model using only initial frames from real robots, and show that policy success rates within the world model highly correlate with real-world success rates. Moreoever, we show that WorldGym is able to preserve relative policy rankings across different policy versions, sizes, and training checkpoints. Due to requiring only a single start frame as input, the world model further enables efficient evaluation of robot policies' generalization ability on novel tasks and environments. We find that modern VLA-based robot policies still struggle to distinguish object shapes and can become distracted by adversarial facades of objects. While generating highly realistic object interaction remains challenging, WorldGym faithfully emulates robot motions and offers a practical starting point for safe and reproducible policy evaluation before deployment.
             </p>
         </div>
-        
+
+        <div class="rollout-section-title">Overview of WorldGym</div>
         <div class="media-gallery">
-            <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin-bottom: 10px;">
-                <div style="text-align: center; flex: 1; min-width: 300px; max-width: 350px;">
-                    <img src="figures/in_distribution_policy_values.png" alt="In-distribution policy values" class="media-item" style="max-width: 100%;">
-                    <div class="media-caption" style="text-align: left;"><b>Estimated policy value ρ̂(π) for in-distribution policies</b> (mean and standard error across 4 runs) using WPE compared to the true policy value ρ(π) using the ground truth LIBERO simulator, where π is the OpenVLA policy. WPE achieves policy values close to the ground truth in tasks such as LIBERO-Object. WPE generally underestimates the policy value, while preserving the relative performance ordering across tasks.</div>
-                </div>
-                <div style="text-align: center; flex: 1; min-width: 300px; max-width: 350px;">
-                    <img src="figures/out_of_distribution_policy_values.png" alt="Out-of-distribution policy values" class="media-item" style="max-width: 100%;">
-                    <div class="media-caption" style="text-align: left;"><b>Evaluated policy value ρ̂(π) for out-of-distribution policies</b> (mean and standard error across 4 runs) aggregated across all tasks in LIBERO. π is the OpenVLA policy with different levels of Gaussian noise. WPE overestimates the policy values across all noise levels, suggesting that evaluating out-of-distribution policies using a world model can be challenging. Nevertheless, WPE preserves the ranking of the out-of-distribution policies.</div>
-                </div>
+            <div style="text-align: center;">
+                <img src="figures_svg/overview.svg" alt="Overview of WorldGym" class="media-item" style="max-width: 100%;">
+                <div class="media-caption" style="text-align: left;"><b>Overview of WorldGym.</b> Given an initial frame and an action sequence predicted by a policy, WorldGym uses a world model to interactively predict future frames, serving as a generative simulator. WorldGym then passes the generated rollout to a VLM which provides rewards. WorldGym can easily be used to test policies on OOD tasks and environments by changing the input language instruction or directly modifying the initial image.</div>
             </div>
         </div>
 
@@ -284,11 +279,11 @@ Evaluating robot control policies is difficult: real-world testing is costly, an
             <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin-bottom: 10px;">
                 <div style="text-align: center; flex: 1; min-width: 300px; max-width: 380px;">
                     <img src="figures_svg/real_vs_world_model_scatter.svg" alt="Per-Task Success Rates" class="media-item" style="max-width: 100%;">
-                    <div class="media-caption" style="text-align: left;"><b>Per-Task Task Success Rates.</b> Each point represents a task from Table \ref{app:tab:bridge_results_detailed}, with different policies being represented by different shaped markers. There is a strong correlation (r=0.78) between policy performance in our world model (y-axis) and within the real world (x-axis).</div>
+                    <div class="media-caption" style="text-align: left;"><b>Per-Task Success Rates.</b> Each point represents a task, with different policies being represented by different shaped markers. There is a strong correlation (r=0.78) between policy performance in our world model (y-axis) and within the real world (x-axis).</div>
                 </div>
                 <div style="text-align: center; flex: 1; min-width: 300px; max-width: 380px;">
                     <img src="figures_svg/mean_success_rates_bar.svg" alt="Mean Success Rates" class="media-item" style="max-width: 100%;">
-                    <div class="media-caption" style="text-align: left;"><b>Mean Success Rates.</b> Robot policies' mean success rates in the world model differ by an average of only 3.3% between from the real world, near the standard error range for each policy. Relative performance rankings between RT-1-X, Octo, and OpenVLA are also preserved.</div>
+                    <div class="media-caption" style="text-align: left;"><b>Mean Success Rates.</b> Robot policies' mean success rates in the world model differ by an average of only 3.3% from the real world, near the standard error range for each policy. Relative performance rankings between RT-1-X, Octo, and OpenVLA are also preserved.</div>
                 </div>
             </div>
         </div>
@@ -347,11 +342,11 @@ Evaluating robot control policies is difficult: real-world testing is costly, an
             <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin-bottom: 10px;">
                 <div style="text-align: center; flex: 1; min-width: 300px; max-width: 380px;">
                     <img src="figures_svg/ood_distraction_eval.svg" alt="OOD Distraction Examples" class="media-item" style="max-width: 100%;">
-                    <div class="media-caption" style="text-align: left;"><b>OOD Distraction Examples.</b> We use Nano Banana to add distractions to every image of the OpenVLA Bridge task suite. The resulting change in mean success rates can be seen in the figure on the right.</div>
+                    <div class="media-caption" style="text-align: left;"><b>OOD Distraction Examples.</b> We use Nano Banana to add distractions to every image of the OpenVLA Bridge task suite.</div>
                 </div>
                 <div style="text-align: center; flex: 1; min-width: 300px; max-width: 380px;">
                     <img src="figures_svg/world_model_vs_ood_success_rates.svg" alt="Effect of OOD Distractors" class="media-item" style="max-width: 100%;">
-                    <div class="media-caption" style="text-align: left;"><b>Effect of OOD Distractors.</b> We use an image editing model to add distractor objects to the Bridge evaluation suite, finding that RT-1-X drops in performance by 51%, Octo by 83%, and OpenVLA by 41.5%, making OpenVLA the most robust to distractors.</div>
+                    <div class="media-caption" style="text-align: left;"><b>Effect of OOD Distractors.</b> When distractor objects are added to the Bridge evaluation suite, RT-1-X drops in performance by 51%, Octo by 83%, and OpenVLA by 41.5%, making OpenVLA the most robust to distractors.</div>
                 </div>
             </div>
         </div>
