--- a/abstract.html
+++ b/abstract.html
@@ -468,7 +468,7 @@ Evaluating robot control policies is difficult: real-world testing is costly, an
                     <img src="rollouts_eval_3/bridge/octo/rollout-2024_05_28-10_05_22-8.gif" alt="TASK_A – POLICY_B">
                   </td>
                   <td class="rollout-cell">
-                    <img src="rollouts_eval_3/bridge/rt1/__vast__as20482__data__bridge__openvla_evaluation__ood__easy__put_eggplant_into_pot_or_pan__rollout-2024_05_28-10_05_22-8__r0_len41.gif" alt="TASK_A – POLICY_C">
+                    <img src="rollouts_eval_3/bridge/rt1/rollout-2024_05_28-10_05_22-8.gif" alt="TASK_A – POLICY_C">
                   </td>
                 </tr>
                 <tr>
@@ -480,7 +480,7 @@ Evaluating robot control policies is difficult: real-world testing is costly, an
                     <img src="rollouts_eval_3/bridge/octo/rollout-2024_05_28-14_47_43-17.gif" alt="TASK_B – POLICY_B">
                   </td>
                   <td class="rollout-cell">
-                    <img src="rollouts_eval_3/bridge/rt1/__vast__as20482__data__bridge__openvla_evaluation__ood__hard__visual_generalization__put_yellow_corn_on_pink_plate--with_clutter__rollout-2024_05_28-14_47_43-17__r0_len41.gif">
+                    <img src="rollouts_eval_3/bridge/rt1/rollout-2024_05_28-14_47_43-17.gif" alt="TASK_B – POLICY_C">
                   </td>
                 </tr>
                 <tr>
@@ -492,7 +492,7 @@ Evaluating robot control policies is difficult: real-world testing is costly, an
                     <img src="rollouts_eval_3/bridge/octo/rollout-2024_05_29-09_41_48-2.gif" alt="TASK_C – POLICY_B">
                   </td>
                   <td class="rollout-cell">
-                    <img src="rollouts_eval_3/bridge/rt1/__vast__as20482__data__bridge__openvla_evaluation__ood__hard__semantic_generalization__take_purple_grapes_out_of_pot__rollout-2024_05_29-09_41_48-2__r0_len41.gif" alt="TASK_C – POLICY_C">
+                    <img src="rollouts_eval_3/bridge/rt1/rollout-2024_05_29-09_41_48-2.gif" alt="TASK_C – POLICY_C">
                   </td>
                 </tr>
               </tbody>
@@ -532,7 +532,7 @@ Evaluating robot control policies is difficult: real-world testing is costly, an
                     <img src="rollouts_eval_3/fractal/octo/ep00000213.gif" alt="TASK_B – POLICY_B">
                   </td>
                   <td class="rollout-cell">
-                    <img src="rollouts_eval_3/fractal/rt1/ep00000213.gif">
+                    <img src="rollouts_eval_3/fractal/rt1/ep00000213.gif" alt="TASK_B – POLICY_C">
                   </td>
                 </tr>
 
